--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts, tsx}\"",
-    "lint:ts:fix": "eslint \"**/*.{ts, tsx}\" --fix"
+    "lint:ts:fix": "eslint \"**/*.{ts, tsx}\" --fix",
+    "lint:scss": "npx stylelint \"**/*.scss\"",
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+    "unit": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/preset-typescript": "^7.23.2",
     "@svgr/webpack": "^6.2.1",
+    "@types/jest": "^29.5.6",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -29,12 +34,15 @@
     "css-loader": "^6.6.0",
     "eslint": "^8.51.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-i18next": "^6.0.3",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
@@ -53,6 +61,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^13.3.0",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "stylelint": "^14.5.3",
+    "stylelint-config-standard-scss": "^3.0.0"
   }
 }
