--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": "stylelint-config-standard-scss",
   "rules": {
-    "indentation": 2,
+    "indentation": "tab",
     "selector-class-pattern": null
   }
 }
