--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
   },
   "ts-node": {
     "compilerOptions": {
-      "module": "CommonJS"
+      "module": "CommonJS",
+      "jsx": "react-jsx"
     }
   },
   "include": ["./setupTests.ts", "src", "types"],
