--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,9 @@
 {
-  "extends": "stylelint-config-standard-scss",
-  "rules": {
-    "indentation": "tab",
-    "selector-class-pattern": null
-  }
+	"extends": "stylelint-config-standard-scss",
+	"rules": {
+		"indentation": "tab",
+		"selector-class-pattern": null,
+		"alpha-value-notation": "number",
+    "color-function-notation": "modern"
+	}
 }
